/**
 * Host defines a way that an Ambassador will be visible to the
 * outside world. A minimal Host defines a hostname (of course) by
 * which the Ambassador will be reachable, but a Host can also
 * tell an Ambassador how to manage TLS, and which resources to 
 * examine for further configuration.
 */
syntax = "proto3";

package getambassador.io.v2;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/api/core/v1/generated.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

// The Host resource will usually be a Kubernetes CRD, but it could
// appear in other forms. The HostSpec is the part of the Host resource
// that doesn't change, no matter what form it's in -- when it's a CRD,
// this is the part in the "spec" dictionary.
message HostSpec {
  // Common to all Ambassador objects (and optional).
  repeated string ambassador_id = 1;

  // Common to all Ambassador objects (and optional).
  int32 generation = 2;

  // Hostname by which the Ambassador can be reached.
  string hostname = 3;

  // Selector by which we can find further configuration. Defaults to hostname=$hostname
  k8s.io.apimachinery.pkg.apis.meta.v1.LabelSelector selector = 4;

  // Specifies whether/who to talk ACME with to automatically manage the $tlsSecret.
  ACMEProviderSpec acmeProvider = 5;

  // Name of the Kubernetes secret into which to save generated
  // certificates.  If ACME is enabled (see $acmeProvider), then the
  // default is $hostname; otherwise the default is "".  If the value
  // is "", then we do not do TLS for this Host.
  k8s.io.api.core.v1.LocalObjectReference tlsSecret = 6;

  // Request policy definition.
  RequestPolicy requestPolicy = 7;

  // Configuration for the Preview URL feature of Service Preview. Defaults to preview URLs not enabled.
  PreviewURLSpec previewUrl = 8;

  // Only one of `tlsConfig` or `tls` can be specified
  oneof tlsConfig {
    // Name of the TLSContext the Host resource is linked with
    k8s.io.api.core.v1.LocalObjectReference tlsContext = 9;

    // TLS config
    TLSConfig tls = 10;
  }
}

enum HostTLSCertificateSource {
  Unknown = 0;
  None    = 1;
  Other   = 2;
  ACME    = 3;
}

enum HostState {
  // The default value is the "zero" value, and it would be great if
  // "Pending" could be the default value; but it's Important that the
  // "zero" value be able to be shown as empty/omitted from display,
  // and we really do want `kubectl get hosts` to say "Pending" in the
  // "STATE" column, and not leave the column empty.
  Initial = 0;
  Pending = 1;
  Ready   = 2;
  Error   = 3;
}

enum HostPhase {
  NA                        = 0;
  DefaultsFilled            = 1;
  ACMEUserPrivateKeyCreated = 2;
  ACMEUserRegistered        = 3;
  ACMECertificateChallenge  = 4;
}

message HostStatus {
  HostTLSCertificateSource tlsCertificateSource = 1;

  HostState state = 2;

  // phaseCompleted and phasePending are valid when state==Pending or
  // state==Error.
  HostPhase phaseCompleted = 3;
  HostPhase phasePending = 4;

  // errorReason, errorTimestamp, and errorBackoff are valid when state==Error.
  string errorReason = 5;
  google.protobuf.Timestamp errorTimestamp = 6;
  google.protobuf.Duration errorBackoff = 7;
}

message ACMEProviderSpec {
  // Specifies who to talk ACME with to get certs. Defaults to Let's
  // Encrypt; if "none" (case-insensitive), do not try to do ACME for
  // this Host.
  string authority = 1;

  string email = 2;

  k8s.io.api.core.v1.LocalObjectReference privateKeySecret = 3;

  // This is normally set automatically
  string registration = 4;
}

message TLSConfig {
  string cert_chain_file = 1;
  string private_key_file = 2;
  string ca_secret = 3;
  string cacert_chain_file = 4;
  string alpn_protocols = 5;
  bool cert_required = 6;
  string min_tls_version = 7;
  string max_tls_version = 8;
  repeated string cipher_suites = 9;
  repeated string ecdh_curves = 10;
  int32 redirect_cleartext_from = 11;
  string sni = 12;
}

message RequestPolicy {
  // How shall we handle insecure requests?
  InsecureRequestPolicy insecure = 1;

  // Later we may define a 'secure' section too.
}

message InsecureRequestPolicy {
  // What action should be taken for an insecure request?
  InsecureRequestAction action = 1;

  // Is there an additional insecure port we should listen on?
  int32 additionalPort = 2;
}

enum InsecureRequestAction {
  Redirect = 0;
  Reject   = 1;
  Route    = 2;
}

message PreviewURLSpec {
  // Is the Preview URL feature enabled?
  bool enabled = 1;

  // What type of Preview URL is allowed?
  PreviewURLType type = 2;
}

enum PreviewURLType {
  Path = 0;
  // Wildcard = 1;
  // Datawire = 2; // FIXME rename this before release
}
